# RestaurantSimulator

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  deploy.fish  docker-compose.yml  manage.py  pyproject.toml
ElephantChat/: asgi.py  settings.py  urls.py  views.py  wsgi.py
RestaurantSimulator/: admin.py  apps.py  models.py  queries.py  views.py
RestaurantSimulator/management/commands/: simulate_chats.py
RestaurantSimulator/migrations/: 0001_initial.py  0002_simulatedchatthread_customer_prompt_and_more.py  0003_alter_chatmessage_role.py  0004_simulatedchatthread_extracted_answers.py  0005_chatmessage_completion_tokens_and_more.py  0006_chatmessage_model.py  0007_chatmessage_temperature.py
RestaurantSimulator/simulator/: chatbot.py  tasks.py
RestaurantSimulator/templatetags/: chat_ui_tags.py
templates/: chat_index.html  index.html
templates/registration/: login.html
theme/static_src/: package-lock.json
theme/static_src/src/: styles.css
theme/templates/: base.html
