[project]
name = "elephantchat"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.2",
    "django-tailwind[cookiecutter,honcho,reload]>=4.4.2",
    "environs[django]>=14.5.0",
    "openai>=2.21.0",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "ruff>=0.15.2",
]
